Fixed background tiling/alignment issue
Background is now fixed to the top and "round" repeating

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
   background-attachment: fixed;
   background-image: url("resources/scene1.jpg");
   background-size: 100%;
-  background-position: bottom;
+  background-repeat: round;
+  background-position: top;
 }
 /* Header Properties */
 .fixed-header{
